# ExoWindows

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
src/exowindows/: __init__.py  allocator.py  auto.py  cli.py  devices.py  network.py  ollama_hook.py  ram_speed.py  scanner.py  speedup.py  torch_hook.py
